Refactored the Create Form page, and added a corresponding route for it. Event Form currently has a heading, which will later be a redirect route when that is incorporated. Also fixed the color of the 'add event' button on the bottom right of the dashboard page.

--- a/client/src/components/App/App.css
+++ b/client/src/components/App/App.css
@@ -1,1 +1,7 @@
 @import '~antd/dist/antd.css';
+
+@media screen and (min-width: 993px) {
+    .responsiveLayout {
+        margin-left: 200px
+    }
+}
