Added routing button to Registration page and form creator page. Fixed an issue with how the newEvent reducer was being stored. Fixed CSS of the form on the FormDisplay for CreateEvent so that it rendered at the start of the page, rather than the center of the page.

--- a/client/src/components/CreatePage/FormWrapper.css
+++ b/client/src/components/CreatePage/FormWrapper.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 75%;
     display: flex;
-    justify-content: center;
+    justify-content: start;
     flex-direction: column;
     min-height: 100%;
 }
